# QuantumTrade

./: CMakeLists.txt  main.cpp
gui/: MainWindow.ui  PaneData.cpp  PaneData.h  PaneData.ui  PaneModels.cpp  PaneModels.h  PaneModels.ui  PaneSettings.cpp  PaneSettings.h  PaneSettings.ui  PaneSimulation.cpp  PaneSimulation.h  PaneSimulation.ui  PaneTemplates.cpp  PaneTemplates.h  PaneTemplates.ui
model/: ApiParams.cpp  ApiParams.h  Functions.cpp  Functions.h  Indicators.cpp  Indicators.h  IndicatorsSelected.cpp  IndicatorsSelected.h  TemplateManager.cpp  TemplateManager.h  TemplateParams.cpp  TemplateParams.h  TemplateParamsSelected.cpp  TemplateParamsSelected.h  TradingPairs.cpp  TradingPairs.h  TradingPairsSelected.cpp  TradingPairsSelected.h  model.cmake
model/acp/: Acp.cpp  Acp.h  AcpResults.cpp  AcpResults.h  acp.cmake
model/functions/: FunctionAbstract.cpp  FunctionAbstract.h  FunctionExp.cpp  FunctionExp.h  FunctionLog.cpp  FunctionLog.h  FunctionLogReturn.cpp  FunctionLogReturn.h  FunctionPercentage.cpp  FunctionPercentage.h  FunctionSqrt.cpp  FunctionSqrt.h  FunctionSquare.cpp  FunctionSquare.h  functions.cmake
model/indicators/: IndicatorADX.cpp  IndicatorADX.h  IndicatorATR.cpp  IndicatorATR.h  IndicatorAbstract.cpp  IndicatorAbstract.h  IndicatorBBW.cpp  IndicatorBBW.h  IndicatorMACD.cpp  IndicatorMACD.h  IndicatorOBV.cpp  IndicatorOBV.h  IndicatorRSI.cpp  IndicatorRSI.h  IndicatorStoch.cpp  IndicatorStoch.h  IndicatorVWAPDev.cpp  IndicatorVWAPDev.h  IndicatorVariance.cpp  IndicatorVariance.h  IndicatorVarianceNegative.cpp  IndicatorVarianceNegative.h  IndicatorVariancePositive.cpp  IndicatorVariancePositive.h  IndicatorVarianceVolume.cpp  IndicatorVarianceVolume.h  indicators.cmake
model/pairs/: Crypto.cpp  Crypto.h  Currency.cpp  Currency.h  ExceptionVariableDb.cpp  ExceptionVariableDb.h  Pair.cpp  Pair.h  Stock.cpp  Stock.h  StreamReaderAbstract.cpp  StreamReaderAbstract.h  Tick.cpp  Tick.h  TickDelegate.cpp  TickDelegate.h  VariableAbstract.cpp  VariableAbstract.h  pairs.cmake
model/readers/: Job.cpp  Job.h  StreamReaderAalphavantageStock.cpp  StreamReaderAalphavantageStock.h  StreamReaderAbstract.cpp  StreamReaderAbstract.h  VariableAvailablility.h  readers.cmake
